refactor: remove the public attribute from workflows (#3283)
