# app/controlplane/api/gen/openapi/openapi.yaml
@@ -22,54 +22,6 @@ externalDocs:
   description: Chainloop Official Documentation
   url: https://docs.chainloop.dev
 paths:
-  /discover/shared/{digest}:
-    get:
-      description: Returns the referrer item for a given digest in the public shared index
-      operationId: ReferrerService_DiscoverPublicShared
-      parameters:
-        - description: Digest is the unique identifier of the referrer to discover
-          in: path
-          name: digest
-          required: true
-          schema:
-            type: string
-        - description: >-
-            Kind is the optional type of referrer, i.e CONTAINER_IMAGE,
-            GIT_HEAD, ...
-
-            Used to filter and resolve ambiguities
-          in: query
-          name: kind
-          schema:
-            type: string
-        - in: query
-          name: pagination.cursor
-          schema:
-            type: string
-        - description: Limit pagination to 100
-          in: query
-          name: pagination.limit
-          schema:
-            format: int32
-            type: integer
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/v1DiscoverPublicSharedResponse'
-          description: A successful response.
-        default:
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rpcStatus'
-          description: An unexpected error response.
-      summary: Discover public shared referrer
-      tags:
-        - ReferrerService
-      security:
-        - bearerToken: []
   /discover/{digest}:
     get:
       description: >-
@@ -284,38 +236,12 @@ components:
         next_cursor:
           type: string
       type: object
-    v1DiscoverPublicSharedResponse:
-      description: Response for the DiscoverPublicShared method
-      example:
-        result:
-          downloadable: true
-          metadata:
-            key: metadata
-          public: true
-          references:
-            - null
-            - null
-          kind: kind
-          digest: digest
-          created_at: '2000-01-23T04:56:07.000+00:00'
-          annotations:
-            key: annotations
-        pagination:
-          next_cursor: next_cursor
-      properties:
-        result:
-          $ref: '#/components/schemas/v1ReferrerItem'
-        pagination:
-          $ref: '#/components/schemas/v1CursorPaginationResponse'
-      title: DiscoverPublicSharedResponse
-      type: object
     v1ReferrerItem:
       description: It represents a referrer object in the system
       example:
         downloadable: true
         metadata:
           key: metadata
-        public: true
         references:
           - null
           - null
@@ -335,11 +261,6 @@ components:
           title: >-
             Downloadable indicates whether the referrer is downloadable or not
             from CAS
-          type: boolean
-        public:
-          title: >-
-            Public indicates whether the referrer is public since it belongs to
-            a public workflow
           type: boolean
         references:
           items:
@@ -371,7 +292,6 @@ components:
           downloadable: true
           metadata:
             key: metadata
-          public: true
           references:
             - null
             - null
